Rename old editor to 'legacy' editor

--- a/blog/_includes/menu.liquid
+++ b/blog/_includes/menu.liquid
@@ -11,8 +11,8 @@
         <li><a href="/about">About</a></li>
         <li><a href="/docs/docs.html">Docs</a></li>
         <li><strong>Blog</strong></li>
-        <li><a href="/program">Web Editor</a></li>
-        <li><a href="/planner">Workout Planner</a></li>
+        <li><a href="/program">Legacy Web Editor</a></li>
+        <li><a href="/planner">Web Editor</a></li>
       </ul>
     </nav>
   </div>
