--- a/src/docs/layout/partials/menu.hbs
+++ b/src/docs/layout/partials/menu.hbs
@@ -11,8 +11,8 @@
         <li><a href="/about">About</a></li>
         <li><strong>Docs</strong></li>
         <li><a href="/blog">Blog</a></li>
-        <li><a href="/program">Web Editor</a></li>
-        <li><a href="/planner">Workout Planner</a></li>
+        <li><a href="/program">Legacy Web Editor</a></li>
+        <li><a href="/planner">Web Editor</a></li>
       </ul>
     </nav>
   </div>
