--- a/blog/_includes/menu.liquid
+++ b/blog/_includes/menu.liquid
@@ -9,7 +9,7 @@
     <nav>
       <ul>
         <li><a href="/about">About</a></li>
-        <li><a href="/docs/docs.html">Docs</a></li>
+        <li><a href="/docs">Docs</a></li>
         <li><strong>Blog</strong></li>
         <li><a href="/program">Legacy Web Editor</a></li>
         <li><a href="/planner">Web Editor</a></li>
