Fix some SEO errors on the pages

--- a/blog/_includes/head.liquid
+++ b/blog/_includes/head.liquid
@@ -3,6 +3,9 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 <meta name="Description" content="{{ title }}" />
 <link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.ico" />
+{% if canonical %}
+  <link rel="canonical" href="{{ canonical }}" />
+{% endif %}
 <title>{{ title }}</title>
 <link rel="stylesheet" href="/docs/assets/css/menu.css" />
 <link rel="stylesheet" href="/docs/assets/css/github-markdown.css" />
