Add blogpost about the localized prices

--- a/blog/_includes/head.liquid
+++ b/blog/_includes/head.liquid
@@ -6,7 +6,7 @@
 {% if canonical %}
   <link rel="canonical" href="{{ canonical }}" />
 {% endif %}
-<title>{{ title }}</title>
+<title>{{ title }} | Liftosaur Blog</title>
 <link rel="stylesheet" href="/docs/assets/css/menu.css" />
 <link rel="stylesheet" href="/docs/assets/css/github-markdown.css" />
 <link rel="stylesheet" href="/docs/assets/css/pilcrow.css" />
