--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,18 @@
   margin-bottom: -3.5rem;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input.no-arrows::-webkit-outer-spin-button,
+input.no-arrows::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input.no-arrows[type="number"] {
+  -moz-appearance: textfield;
+}
+
 body {
   font-size: 14px;
   background: white;
