--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,13 @@
 @tailwind base;
 @tailwind components;
 
+@layer base {
+  html,
+  :host {
+    -webkit-tap-highlight-color: revert;
+  }
+}
+
 @import "~prismjs/themes/prism.css";
 @import "fonts.css";
 
@@ -15,6 +22,12 @@
 .ptr--pull {
   margin-top: 3.5rem;
   margin-bottom: -3.5rem;
+}
+
+[data-screen="main"] .ptr--pull,
+[data-screen="main"] .ptr--refresh {
+  margin-top: 4.5rem;
+  margin-bottom: -4.5rem;
 }
 
 /* Chrome, Safari, Edge, Opera */
