--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ body {
   font-size: 14px;
   background: white;
   color: #171718;
+  height: auto;
 }
 
 .safe-area-inset-top {
@@ -195,7 +196,9 @@ input[type="checkbox"].checkbox {
   height: 10px;
   /* border-left-color: #fff; */
   background: white;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  box-shadow:
+    0 1px 3px 0 rgba(0, 0, 0, 0.1),
+    0 1px 2px 0 rgba(0, 0, 0, 0.06);
   transform: rotate(45deg);
 }
 
@@ -455,7 +458,9 @@ iframe#exercise-youtube-player {
 .fade {
   opacity: 0;
   visibility: hidden;
-  transition: opacity ease-in-out 0.2s, visibility ease-in-out 0.2s;
+  transition:
+    opacity ease-in-out 0.2s,
+    visibility ease-in-out 0.2s;
 }
 
 .fadein {
