--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,10 @@ body {
   padding-top: env(safe-area-inset-top, 0.5rem);
 }
 
+.safe-area-inset-top-compensate {
+  margin-bottom: calc(env(safe-area-inset-top, 0.5rem) * -1);
+}
+
 .safe-area-inset-bottom {
   padding-bottom: env(safe-area-inset-bottom, 0.5rem);
 }
